# order-manager-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
order_manager_api/: main.py  models.py
order_manager_api/api/: deps.py  main.py
order_manager_api/api/routes/: orders.py
order_manager_api/api/routes/pagseguro/: orders.py
order_manager_api/core/: db.py  settings.py
order_manager_api/lib/: date_helper.py
order_manager_api/lib/adapters/: pagseguro_order_adapter.py
order_manager_api/lib/pagseguro/: order.py
scripts/: create_user_auth.py
tests/: sender.py
