[project]
name = "order-manager-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Calgaro",email = "carloscalgarof@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.125.0,<0.126.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pwdlib (>=0.3.0,<0.4.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
create-user = "order_manager_api.scripts.create_user_auth:main"
send = "tests.sender:main"